Adding some css

--- a/week2/index.html
+++ b/week2/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
   <head>
-    <title>Week 1</title>
+    <title>Week 2</title>
     <link rel="stylesheet" href="../styles/main.css">
   </head>
 
 <body>
   <h1>WDD 330 portfolio</h1>
-  <h2>Week 1</h2>
-  <a href="story_editor.html">Doing stuff with web things exercise</a>
+  <h2>Week 2</h2>
+  <a href="../quiz/index.html">Quiz Ninja Project</a>
 
   
 </body>
