--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rafael Solorio">
+    <link rel="stylesheet" href="styles/main.css">
     <title>WDD 330 portfolio</title>
   </head>
   <body>
