--- a/week3/index.html
+++ b/week3/index.html
@@ -11,13 +11,11 @@
   <a href="../quiz/index.html">Quiz Ninja Project</a>
 
   <h3>Notes:</h3>
-  <p>I must have the habit of making comments in my programs, it is something that I don't do often 
-    but I must give it more importance since it makes the programs easier to read.
-  </p>
-  <p>Hard equality (===) should always be used when comparing values in a program to avoid problems.</p>
-  <p>If I write a block of code more than once I have to turn it into a function, 
-    it will make my job easier (The DRY principle).</p>
+  <h4>Object methods</h4>
+  <p>It's better to use the shorter syntax for methods, it's easier to do and looks better.</p>
+  <h4>Objects</h4>
+  <p>Objects are assigned by reference. So if I make changes to a variable assigned to an object, 
+    the change simply affects the object.</p>
 
-  
 </body>
 </html>
