--- a/week4/index.html
+++ b/week4/index.html
@@ -7,10 +7,19 @@
 
 <body>
   <h1>WDD 330 portfolio</h1>
-  <h2>Week 3</h2>
-  <a href="../forms/search.html">forms</a>
-
+  <h2>Week 4</h2>
   <h3>Notes:</h3>
+  <h4>Forms</h4>
+  <p>Tip to make the forms more user-friendly: use the <i>placeholder</i> attribute, it is useful to give the user hints to fill out the form.</p>
+  <p>Study the list of attributes that can be used to make forms more user-friendly.</p>
+  <p>It is important to use the correct input field, for example, use a <i>password</i> input field instead of a <i>text</i> input field if I want the user to enter a password.</p>
+  <h4>OOP</h4>
+  <p>There are many benefits to object-oriented programming, for example, using the same functionality for multiple objects, or inheriting attributes and characteristics from one object to a new object.</p>
+  <p>Remember that names for class declarations are capitalized.</p>
+  <p>It is recommended to use arrow functions in callbacks because they do not have their own <i>this</i> context.</p>
+  <h4>Modules</h4>
+  <p>There are many advantages using modules, they make the code more organized, and it makes it easier to obtain the functionalities that we want for our program.</p>
+  <p>The code in a module should have a single purpose.</p>
 
 </body>
 </html>
