working with one file

--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -22,11 +22,11 @@
 
     <form id="task">
         <label for='taskContent'>Add a task:
-            <input type='text' id='' name='taskContent' autofocus placeholder='Your task'>
+            <input type='text' id='task-input' name='taskContent' autofocus placeholder='Your task'>
             <button type='submit'>+</button>
         </label>
     </form>
 
-    <script src="main.js" type="module"></script>
+    <script src="main.js"></script>
 </body>
 </html>
