--- a/week7/index.html
+++ b/week7/index.html
@@ -3,12 +3,26 @@
   <head>
     <title>Week 7</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="w7styles.css">
   </head>
 
 <body>
   <h1>WDD 330 portfolio</h1>
   <h2>Week 7</h2>
   <h3>Notes:</h3>
+  <h4>Functions </h4>
+  <p>Functions are <i>first-class objects</i> (they can be passed around in the same way as every other
+     value and they can have properties and methods themselves, like objects)</p>
+
+  <h4>Promises</h4>
+  <p>A promise represents the future result of an asynchronous operation.</p>
+  <p>I think promises are a useful tool because they help simplify the process in a program</p>
+  <p id="list">The phases of a promise:</p>
+  <ul>
+    <li>Pending phase (waiting the results of an operation). </li>
+    <li>Then the promise is settled.</li>
+    <li>Then if the promise has been settled it may have been resolved or rejected</li>
+  </ul>
 
   
 </body>
