--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -17,8 +17,8 @@
             <div>
                 <p id="tasksLeft"></p>
                 <button id="all" type='submit'>All</button>
-                <button id="completed"type='submit'>Completed</button>
-                <button id="notCompleted"type='submit'>Not Completed</button>
+                <button id="complete" type='submit'>Completed</button>
+                <button id="incomplete" type='submit'>Not Completed</button>
             </div>
         </section>
 
