--- a/week3/index.html
+++ b/week3/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-  <h1>WDD 330 portfolio</h1>
+  <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 3</h2>
   <a href="../quiz/index.html">Quiz Ninja Project</a>
 
