--- a/week1/index.html
+++ b/week1/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-  <h1>WDD 330 portfolio</h1>
+  <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 1</h2>
   <a href="story_editor.html">Doing stuff with web things exercise</a>
 
