--- a/week4/index.html
+++ b/week4/index.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-  <h1>WDD 330 portfolio</h1>
+  <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 4</h2>
   <h3>Notes:</h3>
   <h4>Forms</h4>
