--- a/week7/index.html
+++ b/week7/index.html
@@ -7,7 +7,7 @@
   </head>
 
 <body>
-  <h1>WDD 330 portfolio</h1>
+  <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 7</h2>
   <h3>Notes:</h3>
   <h4>Functions </h4>
