--- a/week7/index.html
+++ b/week7/index.html
@@ -9,6 +9,7 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 7</h2>
+  <a href="ajax.html">Ajax excercise</a>
   <h3>Notes:</h3>
   <h4>Functions </h4>
   <p>Functions are <i>first-class objects</i> (they can be passed around in the same way as every other
