--- a/week7/ajax.html
+++ b/week7/ajax.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <title>Ajax Example</title>
+<link rel="stylesheet" href="ajax.css">
 </head>
 <body>
 <button id='number'>Number Fact</button>
