--- a/week7/index.html
+++ b/week7/index.html
@@ -10,7 +10,7 @@
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 7</h2>
   <a id="ajax" href="ajax.html">Ajax excercise</a>
-  <h3>Notes:</h3>
+  <h3 id="notes">Notes:</h3>
   <h4>Functions </h4>
   <p>Functions are <i>first-class objects</i> (they can be passed around in the same way as every other
      value and they can have properties and methods themselves, like objects)</p>
