--- a/todo_app/index.html
+++ b/todo_app/index.html
@@ -17,10 +17,10 @@
             </ul>
 
             <div id="buttons">
-                <p id="tasksLeft"></p>
+                <span id="tasksLeft"></span>
                 <button class="buttons" id="all" type='submit'>All</button>
                 <button class="buttons" id="complete" type='submit'>Completed</button>
-                <button class="buttons" id="incomplete" type='submit'>Not Completed</button>
+                <button class="buttons" id="incomplete" type='submit'>Incompleted</button>
             </div>
         </section>
 
