--- a/week8/index.html
+++ b/week8/index.html
@@ -3,14 +3,19 @@
   <head>
     <title>Week 8</title>
     <link rel="stylesheet" href="../styles/main.css">
+    <link rel="stylesheet" href="w8styles.css">
   </head>
 
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 8</h2>
+  <a id="exercise" href="transforms.html">Transforms and transitions excercise</a>
   <h3 id="notes">Notes:</h3>
   <p>Transforms don't work on inline elements. But that's easy enough to fix. We'll just add display: inline-block; to the element</p>
+  <p>Don't declare a new transform because a second transform would override the first. To declare multiple transformations, 
+    provide a space-separated list of transform functions.<br>For example: transform: translateX(40px) scale(1.5);</p>
   <p>Scaling and translation have no impact on the document flow.</p>
+
 
   
 </body>
