--- a/week8/index.html
+++ b/week8/index.html
@@ -9,7 +9,8 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 8</h2>
-  <a id="exercise" href="transforms.html">Transforms and transitions excercise</a>
+  <h3 id="notes">Exercises:</h3>
+  <a id="exercise" href="transforms.html">Transforms and transitions</a>
   <h3 id="notes">Notes:</h3>
   <p>Transforms don't work on inline elements. But that's easy enough to fix. We'll just add display: inline-block; to the element</p>
   <p>Don't declare a new transform because a second transform would override the first. To declare multiple transformations, 
