--- a/week8/index.html
+++ b/week8/index.html
@@ -10,11 +10,18 @@
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 8</h2>
   <h3 id="notes">Exercises:</h3>
-  <a id="exercise" href="transforms.html">Transforms and transitions</a>
+  <ul>
+    <li>
+      <a class="exercise" href="transforms.html">Transforms and transitions</a><br>
+    </li>
+    <li>
+      <a class="exercise" href="canvas.html">Canvas</a>
+    </li>
+  </ul>
   <h3 id="notes">Notes:</h3>
-  <p>Transforms don't work on inline elements. But that's easy enough to fix. We'll just add display: inline-block; to the element</p>
+  <p>Transforms don't work on inline elements. To handle it I need to add display: inline-block; to the element</p>
   <p>Don't declare a new transform because a second transform would override the first. To declare multiple transformations, 
-    provide a space-separated list of transform functions.<br>For example: transform: translateX(40px) scale(1.5);</p>
+    use a space-separated list of transform functions.<br>For example: transform: translateX(40px) scale(1.5);</p>
   <p>Scaling and translation have no impact on the document flow.</p>
 
 
