--- a/week8/transforms.html
+++ b/week8/transforms.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Week 8</title>
+    <title>Transforms excercise</title>
     <link rel="stylesheet" href="transforms.css">
   </head>
 
