--- a/week9/index.html
+++ b/week9/index.html
@@ -12,17 +12,15 @@
   <h3 id="notes">Exercises:</h3>
   <ul>
     <li>
-      <a class="exercise" href="#"></a><br>
+      <a class="exercise" href="factors.html">Factors excercise</a><br>
     </li>
-    <li>
-      <a class="exercise" href="#"></a>
-    </li>
+
   </ul>
   <h3 id="notes">Notes:</h3>
-  <p></p>
-  <p></p>
-  <p></p>
-
+  <p>Global variables are actual properties of a global object</p>
+  <p>These methods: alert(), confirm() and prompt() will stop the execution of a program</p>
+  <p>Cookies are small files that are saved locally on a user's computer.They can be used for personalizing a user's browsing experience.</p>
+  <p>To create a cookie I need to use the <i>document.cookie</i> property, for example: <i>document.cookie = 'name=Superman';</i></p>
 
   
 </body>
