--- a/week9/index.html
+++ b/week9/index.html
@@ -14,6 +14,9 @@
     <li>
       <a class="exercise" href="factors.html">Factors excercise</a><br>
     </li>
+    <li>
+      <a class="exercise" href="websocket/websocket.html">Websocket excercise</a><br>
+    </li>
 
   </ul>
   <h3 id="notes">Notes:</h3>
