--- a/week10/index.html
+++ b/week10/index.html
@@ -1,20 +1,27 @@
 <!doctype html>
 <html>
   <head>
-    <title>Week 9</title>
+    <title>Week 10</title>
     <link rel="stylesheet" href="../styles/main.css">
-    <link rel="stylesheet" href="w9styles.css">
+    <link rel="stylesheet" href="w10styles.css">
   </head>
 
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 10</h2>
   <h3 id="notes">Notes:</h3>
-  <p></p>
-  <p></p>
-  <p></p>
-  <p></p>
-
+  <h4>Client-side form validation</h4>
+  <p>If I want the user to have a good experience I must use form validation, a great advantage of doing so 
+    is that when incorrect data is found the user can quickly fix it.</p>
+  <p>Validation done in the browser is called <i>client-side validation</i></p>
+  <p>Examples of form validation feedback:</p>
+  <ul>
+    <li>Please enter your phone number in the format xxx-xxxx" (A specific data format is required for it to be considered valid).</li>
+    <li>Please enter a valid email address" (the data you entered is not in the right format).</li>
+  </ul>
+  <p>I can validate user data without JavaScript, this is done by using validation attributes on form elements. 
+    For example: <i>required</i>, <i>minlength</i> and <i>maxlength</i>. 
+    This is called <i>Built-in form validation</i></p>
   
 </body>
 </html>
