--- a/cat_app/index.html
+++ b/cat_app/index.html
@@ -28,9 +28,9 @@
         </section>
     </main>
     <footer>
-        Data Source: <a href="https://thecatapi.com/" Target="_blank">The Cat API</a>
+        Data Source: <a href="https://thecatapi.com/" Target="_blank">The Cat API</a> | Rafael Solorio
     </footer>
-    <script></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
