--- a/final_project.html
+++ b/final_project.html
@@ -6,7 +6,7 @@
   </head>
 
 <body>
-  <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
+  <a class="index" href="index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Final Project</h2>
   <ul class="project-list">
     <li><a href="weather_app/index.html">Weather App</a></li>
