--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -24,6 +24,7 @@
             </picture>
             <div class="weather-summary">
               <ul>
+                <li><span id="city-name"></span></li>
                 <li>Currently: <span class="left" id="currently">Sunny<span></li>
                 <li>High: <span class="left" id="temperature"></span>°F
                 <li>Wind Chill: <span class="left" id="wind-chill"></span>°F
