--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -13,30 +13,30 @@
     <body>
         <main>
           <form id="search">
-            <input type="search" id="name" name="q">
+            <input type="search" id="name" name="q" pattern="[A-Z a-z]+" placeholder="search the weather">
             <button class ='button' type='submit'>&#x1F50E;&#xFE0E;</button>
           </form>
           <div id="weather-summary">
             <span id="unit-container"><span id="imperial">F </span>|<span id="metric"> C</span></span>
             <ul>
               <li><span id="city-name">Tijuana</span></li>
-              <li id="temperature-li"><span class="left" id="temperature">34</span><span id="t-unit">C</span>
-              <li><span class="left" id="currently">Clear<span></li>
-              <li class="weather-li">Wind Chill: <span class="left" id="wind-chill"></span><span id="w-unit">23 C</span>
-              <li class="weather-li">Humidity: <span class="left" id="humidity">67</span>%
-              <li class="weather-li">Wind Speed: <span class="left" id="wind-speed"></span><span class="left" id="ws-unit">34 m/s</span>
+              <li id="temperature-li"><span class="left" id="temperature">54 C</span><span id="t-unit"></span>
+              <li><span class="left" id="currently">Cloud<span></li>
+              <li class="weather-li"><img src="images/humidity.png" id="himg">Humidity: <span class="left" id="humidity">10</span>%
+              <li class="weather-li"><img src="images/wind.png" id="wimg">Wind Speed: <span class="left" id="wind-speed"></span>3.45<span class="left" id="ws-unit">mph</span>
+              <li class="weather-li"><img src="images/minimize.png" id="pimg">Pressure: <span class="left" id="pressure">23.4</span><span id="p-unit">inHg</span>
             </ul>
           </div>
           <div class="forecastdiv">
             <div class="Wed">
-              <h4 class="day-name">Wednesday</h4>
+              <h4 class="day-name">Wednesda</h4>
               <img class="iconf" src="https://via.placeholder.com/80x80" alt="icon">
-              <h5 class="forecast">sunny</h5>
+              <h5 class="forecast">cloud</h5>
             </div>
             <div class="Thu">
-              <h4 class="day-name">Friday</h4>
+              <h4 class="day-name"></h4>
               <img class="iconf" src="https://via.placeholder.com/80x80" alt="icon">
-              <h5 class="forecast">clear</h5>
+              <h5 class="forecast"></h5>
             </div>
             <div class="Fri">
               <h4 class="day-name"></h4>
