--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -19,19 +19,19 @@
           <div id="weather-summary">
             <span id="unit-container"><span id="imperial">F </span>|<span id="metric"> C</span></span>
             <ul>
-              <li><span id="city-name">Tijuana</span></li>
-              <li id="temperature-li"><span class="left" id="temperature">54 C</span><span id="t-unit"></span>
-              <li><span class="left" id="currently">Cloud<span></li>
-              <li class="weather-li"><img src="images/humidity.png" id="himg">Humidity: <span class="left" id="humidity">10</span>%
-              <li class="weather-li"><img src="images/wind.png" id="wimg">Wind Speed: <span class="left" id="wind-speed"></span>3.45<span class="left" id="ws-unit">mph</span>
-              <li class="weather-li"><img src="images/minimize.png" id="pimg">Pressure: <span class="left" id="pressure">23.4</span><span id="p-unit">inHg</span>
+              <li><span id="city-name"></span></li>
+              <li id="temperature-li"><span class="left" id="temperature"></span><span id="t-unit"></span>
+              <li><span class="left" id="currently"><span></li>
+              <li class="weather-li"><img src="images/humidity.png" id="himg">Humidity: <span class="left" id="humidity"></span>%
+              <li class="weather-li"><img src="images/wind.png" id="wimg">Wind Speed: <span class="left" id="wind-speed"></span><span class="left" id="ws-unit"></span>
+              <li class="weather-li"><img src="images/minimize.png" id="pimg">Pressure: <span class="left" id="pressure"></span><span id="p-unit">inHg</span>
             </ul>
           </div>
           <div class="forecastdiv">
             <div class="Wed">
-              <h4 class="day-name">Wednesda</h4>
+              <h4 class="day-name"></h4>
               <img class="iconf" src="https://via.placeholder.com/80x80" alt="icon">
-              <h5 class="forecast">cloud</h5>
+              <h5 class="forecast"></h5>
             </div>
             <div class="Thu">
               <h4 class="day-name"></h4>
