--- a/cat_app/index.html
+++ b/cat_app/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rafael Solorio">
     <title>Learn about cats</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/small.css">
+    <link rel="stylesheet" href="styles/large.css">
 </head>
 
 <body>
@@ -24,13 +25,14 @@
             <select id="breeds-options">
                 <option></option>
             </select>
-            <div id="cats"></div>
+            <div id="cats">
+            </div>
         </section>
     </main>
     <footer>
-        Data Source: <a href="https://thecatapi.com/" Target="_blank">The Cat API</a> | Rafael Solorio
+        Data Source: <a href="https://thecatapi.com/" Target="_blank">The Cat API</a>
     </footer>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
 </body>
 
 </html>
