--- a/weather_app/index.html
+++ b/weather_app/index.html
@@ -19,7 +19,7 @@
           <div id="weather-summary">
             <span id="unit-container"><span id="imperial">F </span>|<span id="metric"> C</span></span>
             <ul>
-              <li><span id="city-name"></span></li>
+              <li><span id="city-name"><i class="fa-solid fa-droplet-degree"></i></span></li>
               <li id="temperature-li"><span class="left" id="temperature"></span><span id="t-unit"></span>
               <li><span class="left" id="currently"><span></li>
               <li class="weather-li"><img src="images/humidity.png" id="himg">Humidity: <span class="left" id="humidity"></span>%
@@ -56,6 +56,7 @@
           </div>
         </main>
         <footer>
+          <p>Weather data source: <a href="https://openweathermap.org/">OpenWeatherMap</a></p>
         </footer>
         <script src="js/main.js" type="module"></script>
     </body>
