--- a/week3/index.html
+++ b/week3/index.html
@@ -8,7 +8,7 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 3</h2>
-  <a href="../quiz/index.html">Quiz Ninja Project</a>
+  <a class="exercise-link" href="../quiz/index.html">Quiz Ninja Project</a>
 
   <h3>Notes:</h3>
   <h4>Object methods</h4>
