--- a/week9/factors.html
+++ b/week9/factors.html
@@ -12,6 +12,6 @@
         <button type='submit'>Submit</button>
     </form>
     <div id='output'></div>
-    <script src='main.js'></script>
+    <script src='main.js' type="module"></script>
 </body>
 </html>
