--- a/week10/index.html
+++ b/week10/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 10</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="w10styles.css">
@@ -9,6 +11,8 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 10</h2>
+  <h3>Team Activity</h3>
+  <a class="exercise-link" href="../quakes/quakes.html">Quakes Near Me</a>
   <h3 id="notes">Notes:</h3>
   <h4>Client-side form validation</h4>
   <p>If I want the user to have a good experience I must use form validation, a great advantage of doing so 
