--- a/week2/index.html
+++ b/week2/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2</title>
     <link rel="stylesheet" href="../styles/main.css">
   </head>
@@ -8,7 +10,10 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 2</h2>
+  <h3>Exercises</h3>
   <a class="exercise-link" href="../quiz/index.html">Quiz Ninja Project</a>
+  <h3>Team Activity</h3>
+  <a class="exercise-link" href="team.html">Team activity</a>
 
   <h3>Notes:</h3>
   <p>I must have the habit of making comments in my programs, it is something that I don't do often 
