--- a/week5/index.html
+++ b/week5/index.html
@@ -3,15 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week 1</title>
+    <title>Week 5</title>
     <link rel="stylesheet" href="../styles/main.css">
   </head>
 
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
-  <h2>Week 1</h2>
+  <h2>Week 5</h2>
   <a class="exercise-link" href="story_editor.html">Doing stuff with web things exercise</a>
-
-  
+  <h3>Notes</h3>
 </body>
 </html>
