--- a/week9/index.html
+++ b/week9/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 9</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="w9styles.css">
@@ -9,6 +11,8 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 9</h2>
+  <h3>Team Activity</h3>
+  <a id="team-exercise" href="javascript30-drums/index-START.html">Drum Kit</a>
   <h3 id="notes">Exercises:</h3>
   <ul>
     <li>
@@ -24,6 +28,9 @@
   <p>These methods: alert(), confirm() and prompt() will stop the execution of a program</p>
   <p>Cookies are small files that are saved locally on a user's computer.They can be used for personalizing a user's browsing experience.</p>
   <p>To create a cookie I need to use the <i>document.cookie</i> property, for example: <i>document.cookie = 'name=Superman';</i></p>
+  <p>The property <i>localStorage</i>, is a native object with properties and methods to store data. If a browser supports the Web Storage API, 
+    the window object will have the <i>localStorage</i> object</p>
+  <p>The information in <i>localStorage</i> is saved in key-value pairs, and the values can only be strings.</p>
 
   
 </body>
