--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>WDD 330 portfolio</title>
   </head>
   <body>
-    <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
+    <a class="index" href="index.html"><h1>WDD 330 portfolio</h1></a>
     <h2 id="block">Block 1</h2>
     <ol id="list">
     </ol>
