--- a/week8/index.html
+++ b/week8/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 8</title>
     <link rel="stylesheet" href="../styles/main.css">
     <link rel="stylesheet" href="w8styles.css">
