cat index html updated

--- a/cat_app/index.html
+++ b/cat_app/index.html
@@ -32,7 +32,7 @@
     <footer>
         Data Source: <a href="https://thecatapi.com/" Target="_blank">The Cat API</a>
     </footer>
-    <script src="js/main.js" type="module"></script>
+    <script src="js/mainprove.js"></script>
 </body>
 
 </html>
