--- a/week5/index.html
+++ b/week5/index.html
@@ -10,7 +10,22 @@
 <body>
   <a class="index" href="../index.html"><h1>WDD 330 portfolio</h1></a>
   <h2>Week 5</h2>
-  <a class="exercise-link" href="story_editor.html">Doing stuff with web things exercise</a>
   <h3>Notes</h3>
+  <p>Errors are caused when something goes wrong in a program.</p>
+  <p>System error ― a problem with the system or external devices</p>
+  <p>Programmer error ― incorrect syntax or faulty logic in the program</p>
+  <p>User error ― errors from the user</p>
+  <h4>Exceptions</h2>
+  <p>An exception is an error that produces a return value that can then be used by the program
+     to deal with the error. It will produce a stack trace, a sequence of functions that lead to the point 
+     where the error occurred</p>
+  <h4>Warning</h4>
+  <p>A warning occur if there's an error in the code that isn't enough to cause the program to crash, 
+    it can be problematic</p>
+
+  <p>I should ensure that my code fails loudly so I can identify any errors and fix them. This is achieved 
+    by making exceptions. I can also use strict mode</p>
+  <p>If I suspect a piece of code will result in an error I can use a try block,  if an exception occurs it 
+    will pass the error object that is thrown onto a catch block.</p>
 </body>
 </html>
